--- a/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -122,7 +122,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>SFML-2.6.1\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>SFML-2.6.1\include;C:\Users\Taha\source\repos\PacManReal\ConsoleApplication1\Include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -142,10 +142,12 @@
     <ClCompile Include="TileRenderer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="FileHandler.h" />
     <ClInclude Include="ghost.h" />
     <ClInclude Include="Graph.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="pacman.h" />
+    <ClInclude Include="Score.h" />
     <ClInclude Include="SoundManager.h" />
     <ClInclude Include="TileRenderer.h" />
   </ItemGroup>
